site\fix: scrollbar height, webpack favicon

--- a/scss/_tags.scss
+++ b/scss/_tags.scss
@@ -1,4 +1,5 @@
 ::-webkit-scrollbar {
+  height: 8px;
   width: 8px;
 }
 ::-webkit-scrollbar-track {
